ytips:第一次提交an-aw-zxing的代码，准备发布第一个版本an-aw-zxing1.0

--- a/an-zxing/src/main/AndroidManifest.xml
+++ b/an-zxing/src/main/AndroidManifest.xml
@@ -1,8 +1,25 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.an.an_zxing">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.an.an_zxing">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:theme="@style/AnAppTheme"
         android:supportsRtl="true">
-
+        <activity android:name="com.an.zxing.view.activity.MipcaCaptureActivity" />
+        <activity android:name="com.an.zxing.view.activity.CaptureActivity" />
     </application>
 
 </manifest>
