--- a/an-zxing/build.gradle
+++ b/an-zxing/build.gradle
@@ -11,7 +11,6 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
     buildTypes {
         release {
@@ -28,4 +27,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.qydq:an-aw-base:0.2.5'
+    compile 'com.google.zxing:core:3.3.0'
 }
