--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
-
+        // jitpack发布github
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,6 +17,12 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
+    }
+    tasks.withType(JavaCompile) {
+        configure(options) {
+            incremental = true
+        }
+//        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
     }
 }
 
