--- a/an-zxing/build.gradle
+++ b/an-zxing/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 //配置jitpack
-//apply plugin: 'com.github.dcendents.android-maven'
-//group = 'com.github.qydq'
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.qydq'
 //配置bintray
-ext {
-    PUBLISH_GROUP_ID = 'cn.android.sunst'
-    PUBLISH_ARTIFACT_ID = 'an-zxing'
-    PUBLISH_VERSION = '1.0'
-}
+//ext {
+//    PUBLISH_GROUP_ID = 'cn.android.sunst'
+//    PUBLISH_ARTIFACT_ID = 'an-zxing'
+//    PUBLISH_VERSION = '1.0'
+//}
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -39,8 +39,9 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.github.qydq:an-aw-base:0.2.5'
+    compile 'com.github.qydq:an-aw-base:0.2.6'
+//    compile 'cn.android.sunst:an-base:2.0.1'
     compile 'com.google.zxing:core:3.3.0'
 }
-apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
+//apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
 //apply from: 'https://raw.githubusercontent.com/bingoogolapple/PublishAar/master/central-publish.gradle'
